# GitLabCITests

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker_analysis_setup.sh
ZAnalysis/: CMakeLists.txt
ZAnalysis/Root/: ElectronCalibAlg.cxx  ElectronSelectionAlg.cxx  LinkDef.h  ZAnalysisAlg.cxx  ZCheck.h
ZAnalysis/ZAnalysis/: ElectronCalibAlg.h  ElectronSelectionAlg.h  ZAnalysisAlg.h
ZAnalysis/macros/: LocalJob.C  LocalJob.py
